# CMakeCacheTests

./: CMakeLists.txt  CMakePresets.json  Makefile  README.md
.github/workflows/: ci.yml
LibA/Lib/: A.cpp  A.hpp
LibA/Tests/: TestA.cpp
LibAB/Lib/: AB.cpp  AB.hpp
LibAB/Tests/: TestAB.cpp
LibB/Lib/: B.cpp  B.hpp
LibB/Tests/: TestB.cpp
cmake/: testing.cmake
